--- a/h-sudoku.cabal
+++ b/h-sudoku.cabal
@@ -88,23 +88,24 @@ library
   
   hs-source-dirs: src
   
-  exposed-modules: Lib
+  exposed-modules: Lib, Resolver
   
   build-depends: base >=4.7 && <5
+  
+  default-language: Haskell2010
+
+test-suite tests-main
+  
+  type: exitcode-stdio-1.0
+  
+  main-is: Main.hs
+  
+  hs-source-dirs: test, src
+  
+  build-depends: base >=4.7 && <5, HUnit
   
   default-language: Haskell2010
 
   other-modules: 
-      Resolver
-
-test-suite my-project-test-suite
-  
-  type: exitcode-stdio-1.0
-  
-  main-is: Spec.hs
-  
-  hs-source-dirs: test
-  
-  build-depends: base >=4.7 && <5
-  
-  default-language: Haskell2010
+    ResolverTests.Base,
+    ResolverTests.Consts
