--- a/h-sudoku.cabal
+++ b/h-sudoku.cabal
@@ -79,16 +79,12 @@ executable h-sudoku
     -- Base language which the package is written in.
     default-language: Haskell2010
 
-    other-modules: 
-      Helpers.ErrorArgumentsMessage,
-      Helpers.HelpMessage, 
-      Lib
 
 library
   
   hs-source-dirs: src
   
-  exposed-modules: Lib, Resolver
+  exposed-modules: Lib
   
   build-depends: base >=4.7 && <5
   
@@ -105,7 +101,3 @@ test-suite tests-main
   build-depends: base >=4.7 && <5, HUnit
   
   default-language: Haskell2010
-
-  other-modules: 
-    ResolverTests.Base,
-    ResolverTests.Consts
