--- a/h-sudoku.cabal
+++ b/h-sudoku.cabal
@@ -84,7 +84,7 @@ library
   
   hs-source-dirs: src
   
-  exposed-modules: Lib
+  exposed-modules: Lib, Resolver
   
   build-depends: base >=4.7 && <5
   
