--- a/h-sudoku.cabal
+++ b/h-sudoku.cabal
@@ -101,3 +101,5 @@ test-suite tests-main
   build-depends: base >=4.7 && <5, HUnit
   
   default-language: Haskell2010
+
+  other-modules: Boards, Fundamentals
